--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,77 @@
-.auth-nav, .site-nav {
+.feature__title {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.clients__title, .staff__title, .work-list__title {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  color: #212121;
+}
+
+.staff-meta-container__title, .feature-meta-list__title {
+  margin-top: 0;
+  margin-bottom: 10px;
+  color: #212121;
+}
+
+.socials, .address-list, .client-list, .staff-socials-list, .staff-list, .work-img-list, .feature-meta-list, .feature__icons, .auth-nav, .site-nav {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.header__container {
+.footer__container, .clients__container, .staff__container, .work-list__container, .feature__container, .header__container {
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
   width: 1200px;
+}
+
+.work-img-list__thumb-img-box, .work-img-list__thumb-img-aplication, .work-img-list__thumb-img-developing {
+  position: absolute;
+  bottom: 27px;
+}
+
+.hero__button {
+  display: inline-block;
+  border-radius: 4px;
+  padding: 6px 22px;
+  color: #212121;
+  background-color: #f5f4fa;
+  border: 1px solid transparent;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  text-align: center;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero__button {
+  color: #ffffff;
+  background-color: #2196f3;
+}
+
+.hero__button:hover, .hero__button:focus {
+  color: #212121;
+  background-color: #f5f4fa;
 }
 
 body {
@@ -137,4 +199,666 @@ img {
 }
 .auth-nav__link:hover .auth-nav__icon, .auth-nav__link:focus .auth-nav__icon {
   fill: #2196f3;
+}
+
+.hero {
+  background-color: #2f303a;
+  text-align: center;
+  height: 600px;
+  max-width: 1600px;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/background-img.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.hero__title {
+  width: 696px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  margin-bottom: 30px;
+  color: #ffffff;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+
+.hero__button {
+  min-width: 216px;
+  padding: 10px 32px;
+  font-weight: 700;
+  line-height: 1.9;
+  letter-spacing: 0.06em;
+}
+.feature {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.feature__icons {
+  display: flex;
+  gap: 30px;
+}
+
+.feature__icons-item {
+  display: flex;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  width: 270px;
+  height: 120px;
+  align-items: center;
+  justify-content: center;
+  background-color: #f5f4fa;
+}
+
+.feature-meta-list {
+  display: flex;
+  gap: 30px;
+}
+
+.feature-meta-list__title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
+
+.feature-meta-list__text {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 14px;
+  line-height: 1.7;
+}
+
+.work-list {
+  padding-top: 0;
+  padding-bottom: 94px;
+}
+
+.work-img-list {
+  display: flex;
+  margin-top: 50px;
+  gap: 30px;
+}
+
+.work-img-list__product-thumb {
+  position: relative;
+}
+
+.work-img-list__product-thumb::before {
+  content: "";
+  width: 370px;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+  position: absolute;
+  top: 224px;
+}
+
+.work-img-list__thumb-img-developing {
+  left: 107px;
+}
+
+.work-img-list__thumb-img-aplication {
+  left: 113px;
+}
+
+.work-img-list__thumb-img-box {
+  left: 95px;
+}
+
+.work-img-list__img-text {
+  margin: 0;
+  padding: 0;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.staff {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background-color: #f5f4fa;
+}
+
+.staff__title {
+  margin-bottom: 50px;
+}
+
+.staff-list {
+  display: flex;
+  flex-basis: auto;
+  gap: 30px;
+}
+
+.staff-list__item {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  background-color: #ffffff;
+}
+
+.staff-meta-container {
+  padding: 30px 32px;
+}
+
+.staff-meta-container__title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+}
+
+.staff-meta-container__text {
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+}
+
+.staff-socials-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.staff-socials-list__link {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.staff-socials-list__link:hover, .staff-socials-list__link:focus {
+  background-color: #2196f3;
+}
+
+.staff-socials-list__icon {
+  fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.staff-socials-list__link:hover .staff-socials-list__icon, .staff-socials-list__link:focus .staff-socials-list__icon {
+  fill: #ffffff;
+}
+
+.clients {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.client-list {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  gap: 30px;
+}
+
+.client-list__link {
+  display: flex;
+  width: 170px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.client-list__link:hover, .client-list__link:focus {
+  border: 1px solid #2196f3;
+}
+
+.client-list__icon {
+  fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.client-list__link:hover .client-list__icon, .client-list__link:focus .client-list__icon {
+  fill: #2196f3;
+}
+
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2f303a;
+}
+
+.footer__container {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer__logo {
+  font-family: "Raleway";
+  font-size: 26px;
+  line-height: 1.19;
+  color: #2196f3;
+}
+
+.footer__logo-studio {
+  color: #ffffff;
+}
+
+.address {
+  margin-top: 20px;
+}
+
+.address-list__item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
+.address-list__link {
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.address-list__link:hover, .address-list__link:focus {
+  color: #2196f3;
+}
+
+.address-list__link--grey {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.socials-links {
+  margin-left: 70px;
+}
+
+.socials-links__title {
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.42;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.socials {
+  display: flex;
+  gap: 10px;
+}
+
+.socials__link {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  fill: #ffffff;
+  background-color: #55565e;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.socials__link:hover, .socials__link:focus {
+  background-color: #2196f3;
+}
+
+.footer-form {
+  margin-left: auto;
+}
+
+.footer-form__title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.footer-form__group {
+  margin-top: 20px;
+  display: flex;
+  position: relative;
+}
+
+.footer-form__lable {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form__input {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  width: 358px;
+  margin-right: 12px;
+  padding: 15px 16px;
+  background-color: transparent;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  color: var(--primary-white-color);
+}
+.footer-form__input:not(:-moz-placeholder-shown) + .footer-form__lable {
+  transform: translateY(-235%);
+}
+.footer-form__input:not(:-ms-input-placeholder) + .footer-form__lable {
+  transform: translateY(-235%);
+}
+.footer-form__input:focus + .footer-form__lable, .footer-form__input:not(:placeholder-shown) + .footer-form__lable {
+  transform: translateY(-235%);
+}
+
+.footer-button {
+  display: flex;
+  border-radius: 4px;
+  width: 200px;
+  padding: 10px 28px;
+  color: #ffffff;
+  background-color: #2196f3;
+  border: 1px solid transparent;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-button:hover, .footer-button:focus {
+  background-color: #ffffff;
+  color: #212121;
+}
+
+.footer-button__icon {
+  margin-left: 10px;
+  fill: #ffffff;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-button:hover .footer-button__icon, .footer-button:focus .footer-button__icon {
+  fill: #212121;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms var(--timing-function);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-200%, -100%) scale(0.7) rotate(0deg);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1) rotate(360deg);
+  border-radius: 4px;
+  min-height: 581px;
+  width: 528px;
+  padding: 40px;
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  margin-left: auto;
+  cursor: pointer;
+  background-color: #ffffff;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button-close:hover {
+  fill: var(--accent-text-color);
+  border-color: var(--accent-text-color);
+}
+
+.modal-discription {
+  margin: 0px 0px 12px 0px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  color: var(--title-text-color);
+}
+
+.form {
+  display: block;
+  width: 448px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form-feedback {
+  margin-bottom: 20px;
+}
+
+.form-checkbox {
+  margin-bottom: 30px;
+}
+
+.form-label {
+  margin-bottom: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+}
+
+.form-input {
+  border: 1px solid var(--border-form-color);
+  border-radius: 4px;
+  padding: 9px 35px;
+  transition: border-color 250ms var(--timing-function);
+}
+
+.form-input:hover,
+.form-input:focus {
+  border-color: var(--accent-text-color);
+}
+
+.form-input:hover + .input-icon,
+.form-input:focus + .input-icon {
+  fill: var(--accent-text-color);
+}
+
+.form-input:focus-visible {
+  outline: none;
+}
+
+.input-icon {
+  transition: fill 250ms var(--timing-function);
+}
+
+.form-name {
+  position: relative;
+}
+
+.input-icon-name {
+  position: absolute;
+  top: 28px;
+  left: 12px;
+}
+
+.form-tell {
+  position: relative;
+}
+
+.input-icon-tell {
+  position: absolute;
+  top: 28px;
+  left: 12px;
+}
+
+.form-email {
+  position: relative;
+}
+
+.input-icon-email {
+  position: absolute;
+  top: 28px;
+  left: 12px;
+}
+
+.textarea-input {
+  border: 1px solid var(--border-form-color);
+  border-radius: 4px;
+  width: 448px;
+  min-height: 120px;
+  padding: 12px 16px;
+  resize: none;
+  transition: border-color 250ms var(--timing-function);
+}
+
+.form-feedback textarea::-moz-placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--placeholder-text-color);
+}
+
+.form-feedback textarea:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--placeholder-text-color);
+}
+
+.form-feedback textarea::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--placeholder-text-color);
+}
+
+.textarea-input:hover,
+.textarea-input:focus {
+  border-color: var(--accent-text-color);
+}
+
+.textarea-input:focus-visible {
+  outline: none;
+}
+
+.form-checkbox {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.checkbox-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.checkbox-input {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+.checkbox-icon-span {
+  display: flex;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--title-text-color);
+  border-radius: 2px;
+  margin-right: 8px;
+  justify-content: center;
+  align-items: center;
+}
+
+.checkbox-icon {
+  fill: transparent;
+}
+
+.checkbox-input:checked + .checkbox-icon-span {
+  border-color: transparent;
+  background-color: #2196f3;
+}
+
+.checkbox-input:checked + .checkbox-icon-span .checkbox-icon {
+  fill: var(--primary-white-color);
+}
+
+.checkbox-text {
+  margin-right: 5px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+}
+
+.checkbox-link {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: var(--accent-text-color);
+}
+
+.form-button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  width: 200px;
+  min-height: 50px;
+  background-color: var(--button-bg-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.06em;
+  color: var(--primary-white-color);
+  box-shadow: var(--button-modal-shadow);
+  cursor: pointer;
+  transition: background-color 250ms var(--timing-function);
+}
+
+.form-button:hover,
+.form-button:focus {
+  background-color: var(--footer-bg-color);
 }/*# sourceMappingURL=main.css.map */
