--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,1 +1,179 @@
-/*# sourceMappingURL=portfolio.css.map */
+.auth-nav, .site-nav {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.header__container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 1200px;
+}
+
+body {
+  background-color: var(--primary-bg-color);
+  color: var(--primary-text-color);
+  font-family: "roboto", "sans-serif";
+  letter-spacing: 0.03em;
+}
+
+a {
+  text-decoration: none;
+  color: currentColor;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+.header {
+  border-bottom: 1px solid var(--outline-color);
+}
+
+.header__container {
+  display: flex;
+}
+
+.header__nav {
+  display: flex;
+  align-items: center;
+}
+
+.header__logo {
+  padding: 15px;
+  font-family: "Raleway", sans-serif;
+  font-size: 26px;
+  line-height: 1.19;
+  color: #2196f3;
+}
+
+.header__logo-studio {
+  color: #000000;
+}
+
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+  gap: 50px;
+}
+
+.site-nav__link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  color: #212121;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.site-nav__link:hover, .site-nav__link:focus {
+  color: #2196f3;
+}
+
+.site-nav__link-current {
+  display: block;
+  position: relative;
+  color: #2196f3;
+}
+.site-nav__link-current:hover, .site-nav__link-current:focus {
+  color: #757575;
+}
+
+.site-nav__link-current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  border-radius: 3px;
+  display: block;
+  width: 100%;
+  height: 5px;
+  background-color: #2196f3;
+  opacity: 1;
+  transform: scaleX(100%);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.site-nav__link-current:hover::after,
+.site-nav__link-current:focus::after {
+  opacity: 0;
+  transform: scaleX(50%);
+}
+
+.auth-nav__container {
+  margin-left: auto;
+}
+
+.auth-nav {
+  display: flex;
+  gap: 50px;
+}
+
+.auth-nav__link {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  color: #757575;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.auth-nav__link:hover, .auth-nav__link:focus {
+  color: #2196f3;
+}
+
+.auth-nav__icon {
+  fill: #757575;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.auth-nav__link:hover .auth-nav__icon, .auth-nav__link:focus .auth-nav__icon {
+  fill: #2196f3;
+}
+
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  padding: 6px 22px;
+  color: var(--title-text-color);
+  background-color: var(--staff-bg-color);
+  border: 1px solid transparent;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  text-align: center;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  transition: background-color 250ms var(--timing-function), color 250ms var(--timing-function);
+}
+
+.button.primary {
+  color: var(--primary-white-color);
+  background-color: var(--button-bg-color);
+}
+
+.button.secondary {
+  color: var(--title-text-color);
+  background-color: var(--staff-bg-color);
+}
+
+.button.primary:hover,
+.button.primary:focus {
+  color: var(--title-text-color);
+  background-color: var(--staff-bg-color);
+}
+
+.button.secondary:hover,
+.button.secondary:focus {
+  color: var(--primary-white-color);
+  background-color: var(--button-bg-color);
+}/*# sourceMappingURL=portfolio.css.map */
