--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,40 +1,41 @@
 .clients {
-    padding-top: 94px;
-    padding-bottom: 94px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
-
+.clients__container {
+  @extend %container;
+}
+.clients__title {
+  @extend %section-title;
+}
 .client-list {
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
+  @extend %list;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  gap: 30px;
 }
 
-.client-list .item+.item {
-    margin-left: 30px;
+.client-list__link {
+  display: flex;
+  width: 170px;
+  height: 92px;
+  border: 1px solid $svg-icon-color;
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+  transition: border 250ms $timing-function;
+  &:hover,
+  &:focus {
+    border: 1px solid $accent-text-color;
+  }
 }
 
-.clients-link {
-    display: flex;
-    width: 170px;
-    height: 92px;
-    border: 1px solid var(--svg-icon-color);
-    border-radius: 4px;
-    justify-content: center;
-    align-items: center;
-    transition: border 250ms var(--timing-function);
-}
-
-.clients-icon {
-    fill: var(--svg-icon-color);
-    transition: fill 250ms var(--timing-function);
-}
-
-.clients-link:hover,
-.clients-link:focus {
-    border: 1px solid var(--accent-text-color);
-}
-
-.clients-link:hover .clients-icon,
-.clients-link:focus .clients-icon {
-    fill: var(--accent-text-color);
+.client-list__icon {
+  fill: $svg-icon-color;
+  transition: fill 250ms $timing-function;
+  .client-list__link:hover &,
+  .client-list__link:focus & {
+    fill: $accent-text-color;
+  }
 }
