--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    background-color: var(--hero-bg-color);
+    background-color: $hero-bg-color;
     text-align: center;
     height: 600px;
     max-width: 1600px;
@@ -8,21 +8,34 @@
     margin-left: auto;
     margin-right: auto;
     background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/background-img.jpg);
+        url(../../images/background-img.jpg);
     background-repeat: no-repeat;
     background-position: center;
 }
 
-.hero-title {
+.hero__title {
     width: 696px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0;
     margin-bottom: 30px;
-    color: var(--primary-white-color);
+    color: $primary-white-color;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+}
+.hero__button {
+    @extend %button;
+    @extend %button-primary;
+    min-width: 216px;
+    padding: 10px 32px;
+    font-weight: 700;
+    line-height: 1.9;
+    letter-spacing: 0.06em;
+    &:hover,
+    &:focus {
+        @extend %button-secondary;
+    }
 }
