--- a/sass/components/_staff.scss
+++ b/sass/components/_staff.scss
@@ -1,76 +1,72 @@
 .staff {
-    padding-top: 94px;
-    padding-bottom: 94px;
-
-    background-color: var(--staff-bg-color);
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background-color: $staff-bg-color;
 }
-
-.staff .list-title {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
+.staff__container {
+  @extend %container;
 }
-
-.staff .text {
-    margin-top: 0;
-    margin-bottom: 16px;
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
+.staff__title {
+  @extend %section-title;
+  margin-bottom: 50px;
 }
-
 .staff-list {
-    display: flex;
-    flex-basis: auto;
-    margin-top: 50px;
+  @extend %list;
+  display: flex;
+  flex-basis: auto;
+  gap: 30px;
+}
+.staff-list__item {
+  box-shadow: $card-shadow;
+  border-radius: 0px 0px 4px 4px;
+  background-color: $primary-bg-color;
+}
+.staff-meta-container {
+  padding: 30px 32px;
+}
+.staff-meta-container__title {
+  @extend %list-title;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
 }
 
-.staff-list .item {
-    box-shadow: var(--card-shadow);
-    border-radius: 0px 0px 4px 4px;
-    background-color: var(--primary-bg-color);
+.staff-meta-container__text {
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
 }
 
-.staff-list>.item+.item {
-    margin-left: 30px;
+.staff-socials-list {
+  @extend %list;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
-.staff-socials {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.staff-socials-list__link {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms $timing-function;
+  &:hover,
+  &:focus {
+    background-color: $accent-text-color;
+  }
 }
 
-.staff-socials .staff-item+.staff-item {
-    margin-left: 10px;
-}
-
-.staff-link {
-    display: flex;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 250ms var(--timing-function);
-}
-
-.staff-block {
-    padding: 30px 32px;
-}
-
-.staff-icon {
-    fill: var(--svg-icon-color);
-    transition: fill 250ms var(--timing-function);
-}
-
-.staff-link:hover .staff-icon,
-.staff-link:focus .staff-icon {
-    fill: var(--primary-white-color);
-}
-
-.staff-link:hover,
-.staff-link:focus {
-    background-color: var(--accent-text-color);
+.staff-socials-list__icon {
+  fill: $svg-icon-color;
+  transition: fill 250ms $timing-function;
+  .staff-socials-list__link:hover &,
+  .staff-socials-list__link:focus & {
+    fill: $primary-white-color;
+  }
 }
