--- a/sass/components/_work-list.scss
+++ b/sass/components/_work-list.scss
@@ -2,21 +2,23 @@
     padding-top: 0;
     padding-bottom: 94px;
 }
-
-.work-img {
+.work-list__container{
+    @extend %container;
+}
+.work-list__title {
+    @extend %section-title;
+}
+.work-img-list {
+    @extend %list;
     display: flex;
     margin-top: 50px;
+    gap: 30px;
 }
-
-.work-img>.item+.item {
-    margin-left: 30px;
-}
-
-.product-thumb {
+.work-img-list__product-thumb {
     position: relative;
 }
 
-.product-thumb::before {
+.work-img-list__product-thumb::before {
     content: '';
     width: 370px;
     height: 70px;
@@ -24,25 +26,22 @@
     position: absolute;
     top: 224px;
 }
-
-.thumb-img {
-    position: absolute;
-    bottom: 27px;
-}
-
-.thumb-img.developing {
+.work-img-list__thumb-img-developing {
+    @extend %thumb-img;
     left: 107px;
 }
 
-.thumb-img.aplication {
+.work-img-list__thumb-img-aplication {
+    @extend %thumb-img;
     left: 113px;
 }
 
-.thumb-img.box {
+.work-img-list__thumb-img-box {
+    @extend %thumb-img;
     left: 95px;
 }
 
-.img-text {
+.work-img-list__img-text {
     margin: 0;
     padding: 0;
     font-weight: 700;
@@ -50,5 +49,5 @@
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: var(--primary-white-color);
+    color: $primary-white-color;
 }
