--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,6 +7,7 @@ $accent-text-color: #2196f3;
 $adress-text-color: rgba(255, 255, 255, 0.6);
 $primary-bg-color: #ffffff;
 $hero-bg-color: #2f303a;
+$hero-gradient:(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
 $staff-bg-color: #f5f4fa;
 $footer-bg-color: #2f303a;
 $button-bg-color: #2196f3;
