--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,6 @@
 @import "./components/footer/footer";
 @import "./components/footer/footer-socials";
 @import "./components/footer/footer-form";
-@import "./components/backdrop";
-@import "./components/modal";
-@import "./components/modal-form";
+@import "./components/modal/backdrop";
+@import "./components/modal/modal";
+@import "./components/modal/modal-form";
