--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -5,4 +5,10 @@
 @import "./components/header/header";
 @import "./components/header/header-site-nav";
 @import "./components/header/header-auth-nav";
-@import "./components/buttons";
+@import "./utils/buttons";
+@import "./components/portfolio/portfolio-main";
+@import "./components/portfolio/portfolio-buttons";
+@import "./components/portfolio/portfolio-cards";
+@import "./components/footer/footer";
+@import "./components/footer/footer-socials";
+@import "./components/footer/footer-form";
