--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,6 +11,7 @@ $hero-gradient:(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
 $staff-bg-color: #f5f4fa;
 $footer-bg-color: #2f303a;
 $button-bg-color: #2196f3;
+$overlay-bg-color:rgba(33, 150, 243, 0.9);
 $outline-color: #eeeeee;
 $footer-icon-color: #55565e;
 $border-footer-form-color:rgba(255, 255, 255, 0.3);
