--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@
   text-align: center;
   letter-spacing: 0.03em;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero__button {
@@ -624,7 +624,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-button-close {
+.modal__button-close {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -640,43 +640,35 @@ img {
   background-color: #ffffff;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-button-close:hover {
-  fill: var(--accent-text-color);
-  border-color: var(--accent-text-color);
+.modal__button-close:hover, .modal__button-close:focus {
+  fill: #2196f3;
+  border-color: #2196f3;
 }
 
-.modal-discription {
+.modal__title {
   margin: 0px 0px 12px 0px;
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
-  color: var(--title-text-color);
+  color: #212121;
 }
 
-.form {
+.modal-form {
   display: block;
   width: 448px;
   margin-left: auto;
   margin-right: auto;
 }
 
-.form-group {
+.modal-form__group {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
+  position: relative;
 }
 
-.form-feedback {
-  margin-bottom: 20px;
-}
-
-.form-checkbox {
-  margin-bottom: 30px;
-}
-
-.form-label {
+.modal-form__label {
   margin-bottom: 4px;
   font-weight: 400;
   font-size: 12px;
@@ -684,63 +676,31 @@ img {
   letter-spacing: 0.01em;
 }
 
-.form-input {
-  border: 1px solid var(--border-form-color);
+.modal-form__input {
+  border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding: 9px 35px;
-  transition: border-color 250ms var(--timing-function);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.form-input:hover,
-.form-input:focus {
-  border-color: var(--accent-text-color);
-}
-
-.form-input:hover + .input-icon,
-.form-input:focus + .input-icon {
-  fill: var(--accent-text-color);
-}
-
-.form-input:focus-visible {
+.modal-form__input:focus-visible {
   outline: none;
 }
-
-.input-icon {
-  transition: fill 250ms var(--timing-function);
+.modal-form__input:hover, .modal-form__input:focus {
+  border-color: #2196f3;
 }
 
-.form-name {
-  position: relative;
-}
-
-.input-icon-name {
+.modal-form__icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: absolute;
   top: 28px;
   left: 12px;
 }
-
-.form-tell {
-  position: relative;
+.modal-form__input:hover + .modal-form__icon, .modal-form__input:focus + .modal-form__icon {
+  fill: #2196f3;
 }
 
-.input-icon-tell {
-  position: absolute;
-  top: 28px;
-  left: 12px;
-}
-
-.form-email {
-  position: relative;
-}
-
-.input-icon-email {
-  position: absolute;
-  top: 28px;
-  left: 12px;
-}
-
-.textarea-input {
-  border: 1px solid var(--border-form-color);
+.modal-form__textarea-input {
+  border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   width: 448px;
   min-height: 120px;
@@ -748,98 +708,97 @@ img {
   resize: none;
   transition: border-color 250ms var(--timing-function);
 }
-
-.form-feedback textarea::-moz-placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  color: var(--placeholder-text-color);
-}
-
-.form-feedback textarea:-ms-input-placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  color: var(--placeholder-text-color);
-}
-
-.form-feedback textarea::placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  color: var(--placeholder-text-color);
-}
-
-.textarea-input:hover,
-.textarea-input:focus {
-  border-color: var(--accent-text-color);
-}
-
-.textarea-input:focus-visible {
+.modal-form__textarea-input:focus-visible {
   outline: none;
 }
+.modal-form__textarea-input:hover, .modal-form__textarea-input:focus {
+  border-color: #2196f3;
+}
 
-.form-checkbox {
+textarea::-moz-placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+textarea:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+textarea::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.checkbox {
+  margin-top: 20px;
+  margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
 }
 
-.checkbox-label {
+.checkbox__label {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.checkbox-input {
+.checkbox__input {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
 }
 
-.checkbox-icon-span {
+.checkbox__icon-container {
   display: flex;
   width: 16px;
   height: 15px;
-  border: 2px solid var(--title-text-color);
+  border: 2px solid #212121;
   border-radius: 2px;
   margin-right: 8px;
   justify-content: center;
   align-items: center;
 }
 
-.checkbox-icon {
+.checkbox__icon {
   fill: transparent;
 }
 
-.checkbox-input:checked + .checkbox-icon-span {
+.checkbox__input:checked + .checkbox__icon-container {
   border-color: transparent;
   background-color: #2196f3;
 }
 
-.checkbox-input:checked + .checkbox-icon-span .checkbox-icon {
-  fill: var(--primary-white-color);
+.checkbox__input:checked + .checkbox__icon-container .checkbox__icon {
+  fill: #ffffff;
 }
 
-.checkbox-text {
+.checkbox__meta {
   margin-right: 5px;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
 }
 
-.checkbox-link {
+.checkbox__link {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
-  color: var(--accent-text-color);
+  color: #2196f3;
 }
 
-.form-button {
+.modal-form-button {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -847,18 +806,16 @@ img {
   border-radius: 4px;
   width: 200px;
   min-height: 50px;
-  background-color: var(--button-bg-color);
+  background-color: #2196f3;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.9;
   letter-spacing: 0.06em;
-  color: var(--primary-white-color);
-  box-shadow: var(--button-modal-shadow);
+  color: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   cursor: pointer;
-  transition: background-color 250ms var(--timing-function);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.form-button:hover,
-.form-button:focus {
-  background-color: var(--footer-bg-color);
+.modal-form-button:hover, .modal-form-button:focus {
+  background-color: #2f303a;
 }/*# sourceMappingURL=main.css.map */
