--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,10 +1,24 @@
-.auth-nav, .site-nav {
+.portfolio__title {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.socials, .address-list, .card-set, .portfolio__buttons, .auth-nav, .site-nav {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.header__container {
+.footer__container, .portfolio__container, .header__container {
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -139,12 +153,12 @@ img {
   fill: #2196f3;
 }
 
-.button {
+.portfolio__button--secondary, .portfolio__button--primary {
   display: inline-block;
   border-radius: 4px;
   padding: 6px 22px;
-  color: var(--title-text-color);
-  background-color: var(--staff-bg-color);
+  color: #212121;
+  background-color: #f5f4fa;
   border: 1px solid transparent;
   font-family: inherit;
   font-weight: 500;
@@ -153,27 +167,272 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   cursor: pointer;
-  transition: background-color 250ms var(--timing-function), color 250ms var(--timing-function);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button.primary {
+.portfolio__button--secondary:hover, .portfolio__button--secondary:focus, .portfolio__button--primary {
+  color: #ffffff;
+  background-color: #2196f3;
+}
+
+.portfolio__button--secondary, .portfolio__button--primary:hover, .portfolio__button--primary:focus {
+  color: #212121;
+  background-color: #f5f4fa;
+}
+
+.portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.portfolio__buttons {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+  gap: 8px;
+}
+
+.portfolio__button--primary:hover, .portfolio__button--primary:focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.portfolio__button--secondary:hover, .portfolio__button--secondary:focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.card-set {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.card-set__item {
+  width: 370px;
+}
+
+.card-set__link {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.card-set__link:hover, .card-set__link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.card-set__thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.card-overlay {
+  position: absolute;
+  width: 370px;
+  height: 294px;
+  padding: 63px 24px;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(0%);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.card-set__link:hover .card-overlay, .card-set__link:focus .card-overlay {
+  transform: translateY(-100%);
+  opacity: 1;
+}
+
+.card-overlay__text {
+  margin: 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.card-content {
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  padding: 20px 24px;
+}
+
+.card-content__title {
+  margin-top: 0;
+  margin-bottom: 4px;
+  color: #212121;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.card-content__text {
+  margin-top: 0;
+  margin-bottom: 0;
+  color: var(--primary-text-color);
+  font-size: 16px;
+  line-height: 1.9;
+}
+
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2f303a;
+}
+
+.footer__container {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer__logo {
+  font-family: "Raleway";
+  font-size: 26px;
+  line-height: 1.19;
+  color: #2196f3;
+}
+
+.footer__logo-studio {
+  color: #ffffff;
+}
+
+.address {
+  margin-top: 20px;
+}
+
+.address-list__item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
+.address-list__link {
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.address-list__link:hover, .address-list__link:focus {
+  color: #2196f3;
+}
+
+.address-list__link--grey {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.socials-links {
+  margin-left: 70px;
+}
+
+.socials-links__title {
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.42;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.socials {
+  display: flex;
+  gap: 10px;
+}
+
+.socials__link {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  fill: #ffffff;
+  background-color: #55565e;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.socials__link:hover, .socials__link:focus {
+  background-color: #2196f3;
+}
+
+.footer-form {
+  margin-left: auto;
+}
+
+.footer-form__title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.footer-form__group {
+  margin-top: 20px;
+  display: flex;
+  position: relative;
+}
+
+.footer-form__lable {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form__input {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  width: 358px;
+  margin-right: 12px;
+  padding: 15px 16px;
+  background-color: transparent;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   color: var(--primary-white-color);
-  background-color: var(--button-bg-color);
+}
+.footer-form__input:not(:-moz-placeholder-shown) + .footer-form__lable {
+  transform: translateY(-235%);
+}
+.footer-form__input:not(:-ms-input-placeholder) + .footer-form__lable {
+  transform: translateY(-235%);
+}
+.footer-form__input:focus + .footer-form__lable, .footer-form__input:not(:placeholder-shown) + .footer-form__lable {
+  transform: translateY(-235%);
 }
 
-.button.secondary {
-  color: var(--title-text-color);
-  background-color: var(--staff-bg-color);
+.footer-button {
+  display: flex;
+  border-radius: 4px;
+  width: 200px;
+  padding: 10px 28px;
+  color: #ffffff;
+  background-color: #2196f3;
+  border: 1px solid transparent;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-button:hover, .footer-button:focus {
+  background-color: #ffffff;
+  color: #212121;
 }
 
-.button.primary:hover,
-.button.primary:focus {
-  color: var(--title-text-color);
-  background-color: var(--staff-bg-color);
+.footer-button__icon {
+  margin-left: 10px;
+  fill: #ffffff;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.button.secondary:hover,
-.button.secondary:focus {
-  color: var(--primary-white-color);
-  background-color: var(--button-bg-color);
+.footer-button:hover .footer-button__icon, .footer-button:focus .footer-button__icon {
+  fill: #212121;
 }/*# sourceMappingURL=portfolio.css.map */
