--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -8,7 +8,7 @@
     margin-left: auto;
     margin-right: auto;
     background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/background-img.jpg);
+        url(../images/background-img.jpg);
     background-repeat: no-repeat;
     background-position: center;
 }
