--- a/css/main.css
+++ b/css/main.css
@@ -75,8 +75,8 @@
 }
 
 body {
-  background-color: var(--primary-bg-color);
-  color: var(--primary-text-color);
+  background-color: #ffffff;
+  color: #757575;
   font-family: "roboto", "sans-serif";
   letter-spacing: 0.03em;
 }
@@ -92,7 +92,7 @@ img {
 }
 
 .header {
-  border-bottom: 1px solid var(--outline-color);
+  border-bottom: 1px solid #eeeeee;
 }
 
 .header__container {
@@ -545,7 +545,7 @@ img {
   padding: 15px 16px;
   background-color: transparent;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  color: var(--primary-white-color);
+  color: #ffffff;
 }
 .footer-form__input:not(:-moz-placeholder-shown) + .footer-form__lable {
   transform: translateY(-235%);
@@ -597,7 +597,7 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  transition: opacity 250ms var(--timing-function);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -705,7 +705,7 @@ img {
   min-height: 120px;
   padding: 12px 16px;
   resize: none;
-  transition: border-color 250ms var(--timing-function);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form__textarea-input:focus-visible {
   outline: none;
