--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -27,8 +27,8 @@
 }
 
 body {
-  background-color: var(--primary-bg-color);
-  color: var(--primary-text-color);
+  background-color: #ffffff;
+  color: #757575;
   font-family: "roboto", "sans-serif";
   letter-spacing: 0.03em;
 }
@@ -44,7 +44,7 @@ img {
 }
 
 .header {
-  border-bottom: 1px solid var(--outline-color);
+  border-bottom: 1px solid #eeeeee;
 }
 
 .header__container {
@@ -266,7 +266,7 @@ img {
 .card-content__text {
   margin-top: 0;
   margin-bottom: 0;
-  color: var(--primary-text-color);
+  color: #757575;
   font-size: 16px;
   line-height: 1.9;
 }
@@ -391,7 +391,7 @@ img {
   padding: 15px 16px;
   background-color: transparent;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  color: var(--primary-white-color);
+  color: #ffffff;
 }
 .footer-form__input:not(:-moz-placeholder-shown) + .footer-form__lable {
   transform: translateY(-235%);
