--- a/sass/components/footer/_footer-form.scss
+++ b/sass/components/footer/_footer-form.scss
@@ -37,7 +37,7 @@
   padding: 15px 16px;
   background-color: transparent;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  color: var(--primary-white-color);
+  color: $primary-white-color;
   &:focus + .footer-form__lable,
   &:not(:placeholder-shown) + .footer-form__lable {
     transform: translateY(-235%);
