--- a/sass/components/modal/_backdrop.scss
+++ b/sass/components/modal/_backdrop.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 20%);
-    transition: opacity 250ms var(--timing-function);
+    transition: opacity 250ms $timing-function;
 }
 
 .backdrop.is-hidden {
