--- a/sass/components/portfolio/_portfolio-cards.scss
+++ b/sass/components/portfolio/_portfolio-cards.scss
@@ -66,7 +66,7 @@
 .card-content__text {
   margin-top: 0;
   margin-bottom: 0;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
   font-size: 16px;
   line-height: 1.9;
 }
